# MRT_Radhika

install/: local_setup.sh  setup.sh
install/aruco_interfaces/share/aruco_interfaces/: local_setup.sh  package.sh  package.xml
install/aruco_interfaces/share/aruco_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  aruco_interfaces__rosidl_typesupport_introspection_cExport.cmake  aruco_interfaces__rosidl_typesupport_introspection_cppExport.cmake  export_aruco_interfaces__rosidl_generator_cExport.cmake  export_aruco_interfaces__rosidl_generator_pyExport.cmake  export_aruco_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  (+1 more)
install/aruco_server/lib/aruco_server/: client  service  vclient  vservice
install/aruco_server/share/aruco_server/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sauron/lib/sauron/: launchfile
install/sauron/share/sauron/: package.sh  package.xml
install/tutorial_interfaces/share/tutorial_interfaces/: package.sh
install/week0_tutorials/share/week0_tutorials/: package.sh  package.xml
install/week1_tutorials/lib/week1_tutorials/: client  service
install/week1_tutorials/share/week1_tutorials/: package.sh  package.xml
log/: latest_build
src/aruco_interfaces/: CMakeLists.txt
src/aruco_interfaces/srv/: ArucoDetect.srv
src/aruco_server/: setup.cfg  setup.py
src/aruco_server/aruco_server/: aruco_client.py  aruco_service.py  arucovid_service.py
src/sauron/: setup.py
src/sauron/install/: local_setup.sh  setup.sh
src/sauron/log/: latest_build
src/week0_tutorials/: setup.py
(+45 files in other folders)
